--- a/src/css/App.css
+++ b/src/css/App.css
@@ -78,15 +78,19 @@ h1#logo{
 }
 
 div[id^="post_"]{
-    padding: 2%;
+    margin: 1% auto;
+    box-sizing: content-box;
+    width: 50%;
     border: solid 2px;
     border-color: black;
+    padding: 2%;
 }
 
 #PostForm{
     margin: 0 auto;
     margin-bottom: 1%;
-    display: table;
+    box-sizing: content-box;
+    width: 44%;
     padding: 1% 5% 1% 5%;
     border: solid 2px;
     border-color: black;
@@ -109,7 +113,7 @@ div[id^="post_"]{
     margin-top: 3%;
     padding: 2%;
     height: 100px;
-    width: 400px;
+    width: 600px;
     font-size: 15pt;
 }
 
