--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,3 @@
-h1#logo{
-    text-align: center;
-    background-color: rgb(161, 255, 255);
-    color: black;
-}
-
 #loginform{
     margin: 5% auto;
     display: table;
@@ -65,6 +59,16 @@ h1#logo{
 }
 
 /* This marks the end of the signup page */
+
+#logo, #profile, #profile{
+    display: inline;
+}
+
+#logo{
+    position: absolute;
+    top: 0%;
+    left: 44%;
+}
 
 #profile{
     position: absolute;
