--- a/src/css/App.css
+++ b/src/css/App.css
@@ -60,8 +60,17 @@
 
 /* This marks the end of the signup page */
 
+#NavBar{
+    background-color: rgb(161, 255, 255);
+}
+
 #logo, #profile, #profile{
     display: inline;
+}
+
+#pre-logo{
+    text-align: center;
+    background-color: rgb(161, 255, 255);
 }
 
 #logo{
