--- a/src/css/App.css
+++ b/src/css/App.css
@@ -73,6 +73,14 @@
     background-color: rgb(161, 255, 255);
 }
 
+#container{
+    position: absolute;
+    top: 0;
+    background-color: rgb(161, 255, 255);
+    width: 1440px;
+    height: 85px;
+}
+
 #logo{
     position: absolute;
     top: 0%;
