--- a/src/css/App.css
+++ b/src/css/App.css
@@ -159,6 +159,14 @@ div[id^="comment_"]{
     font-size: 13pt;
 }
 
+#commentform{
+    border: solid 1px;
+    border-color: rgb(80, 80, 80);
+    border-radius: 3px;
+    height: 100px;
+    width: 700px;
+}
+
 /* This is the end of the home page */
 
 #userInfo{
