--- a/src/css/App.css
+++ b/src/css/App.css
@@ -106,6 +106,7 @@ div[id^="post_"]{
     border: solid 2px;
     border-color: black;
     padding: 2%;
+    border-radius: 5px;
 }
 
 div[id^="comment_"]{
@@ -114,6 +115,7 @@ div[id^="comment_"]{
     margin-top: 1%;
     border: solid 2px;
     border-color: black;
+    border-radius: 5px;
     padding: 2%;
 }
 
@@ -125,6 +127,7 @@ div[id^="comment_"]{
     padding: 1% 5% 1% 5%;
     border: solid 2px;
     border-color: black;
+    border-radius: 5px;
 }
 #PostForm input[type="text"]{
     border: solid 1px;
@@ -146,6 +149,7 @@ div[id^="comment_"]{
     height: 100px;
     width: 600px;
     font-size: 15pt;
+    resize: none;
 }
 
 #PostForm input[type="submit"]{
@@ -165,6 +169,7 @@ div[id^="comment_"]{
     border-radius: 3px;
     height: 100px;
     width: 700px;
+    resize: none;
 }
 
 #commentsubmit{
@@ -200,6 +205,7 @@ h5#userposts{
     border-color: rgb(80, 80, 80);
     border-radius: 5px;
     box-sizing: content-box;
+    resize: none;
     width: 800px;
 }
 
