--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+#root{
+    background-color: rgb(245, 245, 245);
+}
+
 #loginform{
     margin: 5% auto;
     display: table;
@@ -62,10 +66,9 @@
 
 #NavBar{
     background-color: rgb(161, 255, 255);
-}
-
-#logo, #profile, #profile{
-    display: inline;
+    border: solid 1.5px;
+    border-color: rgb(80, 80, 80);
+    margin-bottom: 1%;
 }
 
 #pre-logo{
@@ -88,15 +91,20 @@
 }
 
 #profile{
+    display: inline-block;
     position: absolute;
-    top: 0%;
-    right: 9%;
+    right: 13%;
 }
 
 #logout{
+    display: inline-block;
     position: absolute;
-    top: 0%;
-    right: 1%;
+    right: 4%;
+}
+
+#homeLink{
+    display: inline-block;
+    margin: 1.5% 2%;
 }
 
 div[id^="post_"]{
@@ -105,16 +113,19 @@ div[id^="post_"]{
     width: 50%;
     border: solid 2px;
     border-color: black;
+    background-color: rgb(255, 255, 255);
     padding: 2%;
     border-radius: 5px;
+    font-weight: bold;
 }
 
 div[id^="comment_"]{
     box-sizing: content-box;
-    width: 50%;
+    width: 94%;
     margin-top: 1%;
     border: solid 2px;
     border-color: black;
+    background-color: white;
     border-radius: 5px;
     padding: 2%;
 }
@@ -135,8 +146,8 @@ div[id^="comment_"]{
     border-radius: 3px;
     margin-top: 3%;
     padding: 2%;
-    height: 30px;
-    width: 600px;
+    height: 10%;
+    width: 98%;
     font-size: 20pt;
 }
 
@@ -147,7 +158,7 @@ div[id^="comment_"]{
     margin-top: 3%;
     padding: 2%;
     height: 100px;
-    width: 600px;
+    width: 98%;
     font-size: 15pt;
     resize: none;
 }
@@ -158,8 +169,8 @@ div[id^="comment_"]{
     border-radius: 5px;
     margin: 2% 40%;
     padding: 2%;
-    height: 45px;
-    width: 100px;
+    height: 10%;
+    width: 18%;
     font-size: 13pt;
 }
 
@@ -168,7 +179,7 @@ div[id^="comment_"]{
     border-color: rgb(80, 80, 80);
     border-radius: 3px;
     height: 100px;
-    width: 700px;
+    width: 98%;
     resize: none;
 }
 
