--- a/src/css/App.css
+++ b/src/css/App.css
@@ -81,14 +81,16 @@ html{
     position: absolute;
     top: 0;
     background-color: rgb(161, 255, 255);
+    border: solid 1.5px;
+    border-color: rgb(80, 80, 80);
     width: 1440px;
     height: 85px;
 }
 
 #logo{
+    display: inline-block;
     position: absolute;
-    top: 0%;
-    left: 44%;
+    left: 44.3%;
 }
 
 #profile{
