--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,13 +9,14 @@ html{
 }
 
 #loginform form{
+    margin: 20% auto;
+    margin-bottom: 1%;
+    width: 85%;
+    padding: 2% 8% 2% 8%;
     border: solid 2px;
-    border-color: rgb(80, 80, 80);
-    border-radius: 2%;
-    padding: 8%;
-    position: relative;
-    margin-top: 7%;
-    text-align: center;
+    border-color: black;
+    background-color: rgb(245, 245, 245);
+    border-radius: 5px;
 }
 
 #loginInput{
@@ -26,7 +27,7 @@ html{
     margin-top: 3%;
     padding: 2%;
     height: 30px;
-    width: 300px;
+    width: 94%;
     font-size: 20pt;
 }
 
@@ -39,10 +40,10 @@ html{
     border: solid 1px;
     border-color: rgb(80, 80, 80);
     border-radius: 5px;
-    margin-top: 3%;
+    margin: 2% 0 0 32%;
     padding: 2%;
     height: 40px;
-    width: 100px;
+    width: 30%;
     font-size: 13pt;
 }
 
