--- a/src/css/App.css
+++ b/src/css/App.css
@@ -31,6 +31,10 @@ html{
     font-size: 20pt;
 }
 
+#loginInput:focus{
+    outline: none;
+}
+
 #loginInput:hover{
     background-color: rgb(220, 253, 255);
     transition-duration: 0.5s;
@@ -45,11 +49,17 @@ html{
     height: 40px;
     width: 30%;
     font-size: 13pt;
+    cursor: pointer;
+    outline: none;
 }
 
 #loginSubmit:hover{
     background-color: rgb(161, 255, 255);
     transition-duration: 1s;
+}
+#loginSubmit:active{
+    outline: none;
+    background-color: rgb(0, 53, 53);
 }
 
 /* This marks the end of the login page */
