--- a/src/css/App.css
+++ b/src/css/App.css
@@ -144,7 +144,7 @@ html{
     margin: 1.5% 2%;
 }
 
-div[id^="post_"]{
+article[id^="post_"]{
     margin: 1% auto;
     box-sizing: content-box;
     width: 50%;
