--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,31 +2,43 @@ html{
     background-color: rgb(236, 236, 236);
 }
 
-#loginform{
-    margin: 5% auto;
-    display: table;
-    padding: 1%;
+button, input[type="submit"]{
+    cursor: pointer;
 }
 
-#loginform form{
-    margin: 20% auto;
-    margin-bottom: 1%;
-    width: 85%;
-    padding: 2% 8% 2% 8%;
+label{
+    font-weight: bold;
+}
+
+#loginformContainer{
+    margin: 50px auto;
+    width: 600px;
+    height: 400px;
+    text-align: center;
     border-radius: 2px;
     border: solid lightgrey 1px;
     background-color: white;
     box-shadow: 0 1px 3px lightgrey;
 }
 
+#loginForm{
+    width: 90%;
+    height: 100%;
+    padding: 5%;
+}
+
+.login{
+    margin: 1%;
+}
+
 .loginInput{
     border: solid lightgrey 1px;
-    border-radius: 4px;
+    border-radius: 2px;
     margin-top: 3%;
     padding: 2%;
     height: 30px;
     width: 94%;
-    font-size: 20pt;
+    font-size: 20px;
 }
 
 .loginInput:focus{
@@ -38,18 +50,14 @@ html{
     transition-duration: 0.5s;
 }
 
-.loginInput:-webkit-autofill::first-line {font-size: 24px}
+.loginInput:-webkit-autofill::first-line {font-size: 20px}
 
 #loginSubmit{
     border: solid lightgrey 1px;
     border-radius: 4px;
-    margin: 2% 0 0 32%;
+    margin-top: 1%;
     padding: 2%;
-    height: 40px;
-    width: 30%;
-    font-size: 13pt;
-    cursor: pointer;
-    outline: none;
+    font-size: 16px;
 }
 
 #loginSubmit:hover{
@@ -93,66 +101,146 @@ html{
 
 /* This marks the end of the signup page */
 
-#NavBar{
-    background-color: rgb(161, 255, 255);
-    border: solid 1.5px;
-    border-color: rgb(80, 80, 80);
-    margin-bottom: 1%;
-}
-
-#pre-logo{
+#logoContainer{
     text-align: center;
-    background-color: rgb(161, 255, 255);
-}
-
-#container{
-    position: absolute;
-    top: 0;
-    background-color: rgb(161, 255, 255);
-    border: solid 1.5px;
-    border-color: rgb(80, 80, 80);
-    width: 1440px;
-    height: 85px;
 }
 
 #logo{
-    display: inline-block;
-    position: absolute;
-    left: 44.3%;
+    padding: 5px 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-weight: normal;
+    background-color: white;
+    overflow: hidden;
 }
 
-#destinationFilter{
-    display: inline-block;
-    position: absolute;
-    left: 18.5%;
+#NavBarContainer{
+    background-color: rgb(161, 255, 255);
+    border: solid lightgrey 1px;
+    margin-bottom: 1%;
+
+    width: 100%;
+    overflow: hidden;
 }
 
-#profile{
-    display: inline-block;
-    position: static;
+#NavBar{
+    margin: 1%;
+    display: flex;
 }
 
-#logout{
-    display: inline-block;
-    position: absolute;
-    right: 5%;
+#NavBar li{
+    list-style-type: none;
+    flex: 1 1 25%;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-#homeLink{
-    display: inline-block;
-    margin: 1.5% 2%;
+#pre-logo{
+    background-color: rgb(161, 255, 255);
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    font-weight: normal;
+}
+
+#container{
+    text-align: center;
+    background-color: rgb(161, 255, 255);
+    border: solid lightgrey 1px;
+    width: 100%;
+}
+
+#home{
+    display: flex;
+}
+
+#PostForm{
+    margin: 0 1%;
+    width: 40%;
+    height: 550px;
+    padding: 1% 3%;
+
+    border: solid lightgray 1px;
+    border-radius: 2px;
+    box-shadow: 0 0 3px lightgrey;
+    background-color: white;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#imageUploadContainer, #postContainer{
+    width: 100%;
+    flex: 1 1 50%;
+}
+
+#imageUploadContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+#uploadForm{
+    display: flex;
+    flex-direction: column;
+}
+
+#imagesContainer{
+    overflow-x: scroll;
+}
+
+#imagesContainer, #uploadformContainer{
+    flex: 1 1 50%;
+}
+
+#PostForm input[type="text"]{
+    border: solid lightgrey 1px;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    margin-top: 3%;
+    padding: 2%;
+    height: 10%;
+    width: 95%;
+    font-size: 18px;
+}
+
+#PostForm textarea{
+    border: solid lightgrey 1px;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    margin-top: 3%;
+    padding: 2%;
+    height: 100px;
+    width: 95%;
+    font-size: 16px;
+    resize: none;
+}
+
+#PostForm input[type="submit"]{
+    border: solid 1px;
+    border-color: rgb(80, 80, 80);
+    border-radius: 5px;
+    margin: 2% 40%;
+    padding: 2%;
+    height: 10%;
+    width: 25%;
+    font-size: 13pt;
+}
+
+#posts{
+    overflow: scroll;
+    height: 600px;
+    width: 100%;
+    margin: 0 1%;
 }
 
 article[id^="post_"]{
-    margin: 1% auto;
-    box-sizing: content-box;
-    width: 50%;
-    border: solid 2px;
-    border-color: black;
-    background-color: rgb(245, 245, 245);
+    width: 95%;
     padding: 2%;
-    border-radius: 5px;
     font-weight: bold;
+    margin-bottom: 1%;
+    
+    border: solid lightgrey 1px;
+    background-color: rgb(245, 245, 245);
+    border-radius: 2px;
 }
 
 article[id^="comment_"]{
@@ -164,52 +252,6 @@ article[id^="comment_"]{
     background-color: white;
     border-radius: 5px;
     padding: 2%;
-}
-
-#PostForm{
-    margin: 0 auto;
-    margin-bottom: 1%;
-    box-sizing: content-box;
-    width: 44%;
-    padding: 1% 5% 1% 5%;
-    border: solid 2px;
-    border-color: black;
-    background-color: rgb(245, 245, 245);
-    border-radius: 5px;
-}
-#PostForm input[type="text"]{
-    border: solid 1px;
-    border-color: rgb(80, 80, 80);
-    background-color: rgb(255, 255, 255);
-    border-radius: 3px;
-    margin-top: 3%;
-    padding: 2%;
-    height: 10%;
-    width: 98%;
-    font-size: 20pt;
-}
-
-#PostForm textarea{
-    border: solid 1px;
-    border-color: rgb(80, 80, 80);
-    border-radius: 3px;
-    margin-top: 3%;
-    padding: 2%;
-    height: 100px;
-    width: 98%;
-    font-size: 15pt;
-    resize: none;
-}
-
-#PostForm input[type="submit"]{
-    border: solid 1px;
-    border-color: rgb(80, 80, 80);
-    border-radius: 5px;
-    margin: 2% 40%;
-    padding: 2%;
-    height: 10%;
-    width: 18%;
-    font-size: 13pt;
 }
 
 #commentform{
