--- a/src/css/App.css
+++ b/src/css/App.css
@@ -182,6 +182,11 @@ label{
     flex: 1 1 50%;
 }
 
+#uploadformContainer{
+    display: flex;
+    flex-direction: column;
+}
+
 .images{
     margin: 0 auto;
     width: 100%;
@@ -259,9 +264,15 @@ label{
 
 #posts{
     overflow: scroll;
-    height: 600px;
-    width: 100%;
     margin: 0 1%;
+    width: 80%;
+    height: 550px;
+    padding: 1% 3%;
+    text-align: center;
+    border: solid lightgray 1px;
+    border-radius: 2px;
+    box-shadow: 0 0 3px lightgrey;
+    background-color: white;
 }
 
 article[id^="post_"]{
